# CopyKnights

./: .gitignore  CMakeLists.txt
include/: buff.h  buffs.h  character_types.h  enemy.h  entrances.h  enums.h  functions.h  game_constants.h  game_manager.h  hud.h  item_enums.h  item_types.h  items.h  lantern.h  map_manager.h  map_types.h  ncurses_config.h  player.h  pot.h  save.h  traps.h  types.h
include/items/: armor.h  foods.h  item_enums.h  item_types.h  items.h  misc.h  spells.h  weapons.h
src/: Makefile  buff.c  enemy.c  entrances.c  functions.c  game_manager.c  hud.c  items.c  lantern.c  main.c  map_manager.c  player.c  pot.c  save.c  traps.c
src/data/: armor_effects.csv  armors.csv  biome_spawns.csv  classes.csv  enemies.csv  enemy_drops.csv
src/data/armor/: armor_effects.csv  armor_spawns.csv  armors.csv
src/data/foods/: foods.csv  foods_effects.csv  foods_spawns.csv
src/data/misc/: misc.csv
src/data/rooms/: readme.md  startingroom.ck  startingroom.ck.txt
src/data/rooms/Bog/: room1.ck.txt  room10.ck.txt  room11.ck.txt  room12.ck.txt  room13.ck.txt  room14.ck.txt  room15.ck.txt  room16.ck.txt  room17.ck.txt  room2.ck.txt  room3.ck.txt  room4.ck.txt  room5.ck.txt  room6.ck.txt  room7.ck.txt  room8.ck.txt  room9.ck.txt
src/data/rooms/Catacombs/: room10.ck.txt  room11.ck.txt  (+12 more)
src/data/spells/: spell_effects.csv  spells.csv
src/data/traps/: trap_effects.csv  traps.csv
src/data/weapons/: weapon_effects.csv  weapon_spawns.csv  weapons.csv
src/items/: armor.c  foods.c  items.c  misc.c  spells.c  weapons.c
src/rooms/: room1.ck  room2.ck  room4.ck
(+26 files in other folders)
